--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.6.1",
+    "exe": "^1.0.2",
     "express": "^4.16.4",
     "noble": "^1.9.1"
   }
